test/functions/vass/resolution/need-missing-return-error.good
need-missing-return-error.chpl:5: error: missing a return statement in a function declared to return a value: 'funfun'
