test/functions/vass/resolution/need-missing-return-error.bad
need-missing-return-error.chpl:2: error: illegal use of function that does not return a value: 'funfun'
